--- a/UWPInterface/MainPage.xaml
+++ b/UWPInterface/MainPage.xaml
@@ -8,6 +8,6 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
+        <Image Source="Assets/Background.jpg" />
     </Grid>
 </Page>
