--- a/UWPInterface/MainPage.xaml
+++ b/UWPInterface/MainPage.xaml
@@ -8,6 +8,25 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Image Source="Assets/Background.jpg" />
+        <Image Source="Assets/Background.jpg" Stretch="Fill" />
+        <Grid Name="Columns" HorizontalAlignment="Center">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="auto" />
+            </Grid.ColumnDefinitions>
+            <Grid Name="Buttons" HorizontalAlignment="Left" Height="568" Width="300" Grid.Column="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                </Grid.RowDefinitions>
+                <Button Name="button1"  Height="60" Width="220" Grid.Column="0" Grid.Row="0" Margin="80,80,0,0" Content="Load Game" FontSize="30" />
+                <Button Name="button2"  Height="60" Width="220" Grid.Column="0" Grid.Row="1" Margin="80,10,0,0" Content="Copy Game" FontSize="30" />
+                <Button Name="button3"  Height="60" Width="220" Grid.Column="0" Grid.Row="2" Margin="80,10,0,0" Content="Settings" FontSize="30" />
+                <Button Name="button4"  Height="60" Width="220" Grid.Column="0" Grid.Row="3" Margin="80,10,0,0" Content="Credits" FontSize="30" />
+            </Grid>
+            <Image Source="Assets/Logo.png" Grid.Column="1" Margin="40,40,40,40" />
+        </Grid>
     </Grid>
 </Page>
