--- a/UWPInterface/MainPage.xaml
+++ b/UWPInterface/MainPage.xaml
@@ -9,22 +9,22 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Image Source="Assets/Background.jpg" Stretch="Fill" />
-        <Grid Name="Columns" HorizontalAlignment="Center">
+        <Grid Name="Display" HorizontalAlignment="Center">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto" />
                 <ColumnDefinition Width="auto" />
             </Grid.ColumnDefinitions>
-            <Grid Name="Buttons" HorizontalAlignment="Left" Height="568" Width="300" Grid.Column="0">
+            <Grid Name="StartButtons" HorizontalAlignment="Left" Height="568" Width="300" Grid.Column="0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
                 </Grid.RowDefinitions>
-                <Button Name="button1"  Height="60" Width="220" Grid.Column="0" Grid.Row="0" Margin="80,80,0,0" Content="Load Game" FontSize="30" />
-                <Button Name="button2"  Height="60" Width="220" Grid.Column="0" Grid.Row="1" Margin="80,10,0,0" Content="Copy Game" FontSize="30" />
-                <Button Name="button3"  Height="60" Width="220" Grid.Column="0" Grid.Row="2" Margin="80,10,0,0" Content="Settings" FontSize="30" />
-                <Button Name="button4"  Height="60" Width="220" Grid.Column="0" Grid.Row="3" Margin="80,10,0,0" Content="Credits" FontSize="30" />
+                <Button Name="LoadGameButton"  Height="60" Width="220" Grid.Column="0" Grid.Row="0" Margin="80,80,0,0" Content="Load Game" FontSize="30" Click="LoadGameButton_Click" />
+                <Button Name="Button2"  Height="60" Width="220" Grid.Column="0" Grid.Row="1" Margin="80,10,0,0" Content="Copy Game" FontSize="30" Click="Button2_Click" />
+                <Button Name="Button3"  Height="60" Width="220" Grid.Column="0" Grid.Row="2" Margin="80,10,0,0" Content="Settings" FontSize="30" Click="Button3_Click" />
+                <Button Name="Button4"  Height="60" Width="220" Grid.Column="0" Grid.Row="3" Margin="80,10,0,0" Content="Credits" FontSize="30" Click="Button4_Click" />
             </Grid>
             <Image Source="Assets/Logo.png" Grid.Column="1" Margin="40,40,40,40" />
         </Grid>
